# these are the mandatory components
ADD_SUBDIRECTORY(pySysMoCo)
ADD_SUBDIRECTORY(examplePhyPublisher)
ADD_SUBDIRECTORY(examplePhySubscriber)
ADD_SUBDIRECTORY(exampleRadioReconfigurator)

ADD_SUBDIRECTORY(libgdtp)

ADD_SUBDIRECTORY(iris_core)
ADD_SUBDIRECTORY(iris_modules)
ADD_SUBDIRECTORY(iris_fll_modules)
